# sqs-admin

./: .all-contributorsrc  .env  .env.development  .env.sample  .gitignore  .prettierignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  index.html  jest-setup.ts  jest.config.js  jest.config.ts  package-lock.json  package.json  renovate.json  tsconfig.app.json  tsconfig.jest.json  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: build.yml  frontend.test.yml  localstack.yml  pages.yml  server.test.yml
esbuild/: build.js  serve.js  serve.mjs
example/: docker-compose.yml
frontend/: App.tsx  config.json  jestTransformer.cjs  setupTests.ts  vite-env.d.ts
frontend/api/: Http.tsx
frontend/components/: Alert.test.tsx  Alert.tsx  CreateQueueDialog.test.tsx  CreateQueueDialog.tsx  MessageItem.test.tsx  MessageItem.tsx  SendMessageDialog.test.tsx  SendMessageDialog.tsx  TabPanel.test.tsx  TabPanel.tsx
frontend/hooks/: useInterval.tsx
frontend/types/: index.tsx
frontend/views/: Overview.test.tsx  Overview.tsx
localstack/: .gitignore  MANIFEST.in  Makefile  README.md  pyproject.toml
localstack/sqs_admin/: __init__.py  app.py  extension.py  util.py
public/: index.html  manifest.json
server/: docker-compose.yml  go.mod  go.sum  main.go
server/aws/: clientConfig.go  sqsClient.go
server/handler/: handler.go  sqsHandler.go  sqsHandler_test.go
server/types/: main.go
server/utils/: config.go  config_test.go
src/: App.tsx
src/api/: Http.tsx
src/aws/: SqsClient.tsx
(+15 files in other folders)
